--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "swc src -d dist",
+    "start": "node dist/src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,8 @@
     "@swc/cli": "^0.3.9",
     "@swc/core": "^1.4.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@notionhq/client": "^2.2.14"
   }
 }
